# genshin-api-scanner

./: Cargo.toml  LICENSE  README.md
src/: main.rs
